--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "react-scripts": "3.0.0"
+    "@types/jest": "^24.0.12",
+    "@types/node": "^11.13.8",
+    "@types/react": "^16.8.15",
+    "@types/react-dom": "^16.8.4",
+    "react-scripts": "3.0.0",
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
